# Tprojects

ASM/: mainPart1.s  mainPart2.s
C/: CMakeLists.txt  compile_commands.json  me  me.c  test  test.c  test.cpp
C/src/: EIGENENV.cpp  ELEMENT.cpp  ENVIORMENT.cpp  ML.cpp  PIPLINE.cpp  REWARD.cpp  TRAINING.cpp  a.out
C2/.cache/clangd/index/: main.cpp.E6396CCD9D3E06D6.idx
C2/src/: gui.cpp  imgui  imgui.ini  imgui_test  main.cpp
Cuda/: main.cu
Python/: DRL.py  animescript.py
Python/.mypy_cache/3.13/: DRL.data.json  DRL.meta.json  DRL2.data.json  DRL2.meta.json  __future__.meta.json  _ast.meta.json  _asyncio.meta.json  _codecs.meta.json  _collections_abc.meta.json  _contextvars.meta.json  _ctypes.meta.json  _decimal.meta.json  _frozen_importlib.meta.json  _frozen_importlib_external.meta.json  _io.meta.json  _operator.meta.json  _queue.meta.json  _random.meta.json  _socket.meta.json  _ssl.meta.json  _struct.meta.json  _thread.meta.json  _warnings.meta.json  _weakref.meta.json  _weakrefset.meta.json  abc.meta.json  animescript.data.json  animescript.meta.json  argparse.meta.json  array.meta.json  ast.meta.json  atexit.meta.json  bdb.meta.json  builtins.meta.json  cmd.meta.json  codecs.meta.json  contextlib.meta.json  contextvars.meta.json  copy.meta.json  copyreg.meta.json  (+51 more)
Python/.mypy_cache/3.13/PIL/: ExifTags.meta.json  GimpGradientFile.meta.json  GimpPaletteFile.meta.json  Image.data.json  Image.meta.json  ImageCms.meta.json  ImageColor.meta.json  ImageFile.meta.json  _util.meta.json  (+17 more)
Python/RA/: control.py
Roombot/: app.hpp  main.cpp
Roombot/implot/: implot.h
(+576 files in other folders)
